Tue Dec  1 15:33:26 1998  DanEspen  <dje@blue>

	* download.html: Updated beta download URL to 2.1.4.

1998-11-30  Dan Espen  <dane@mk.bellcore.com>

	* download.html: Updated beta download URL to 2.1.3.
	Added link to /pub/fvwm.

	* index.html: Corrected URL for bug tracking system.

1998-11-25  Dan Espen  <dane@mk.bellcore.com>

	* index.html: Linked main page to bug tracking system.

	* black-stone1.jpg: A little darker version.

1998-11-23  Dan Espen  <dane@mk.bellcore.com>

	* man-pages.html: removed -man from the file names.

1998-11-12  Dan Espen  <dane@mk.bellcore.com>

	* cvs.html (Deleting Directories and Files): Added description of
	file deletion process.

	*  cvs.html (Getting_Updates): Added example of  how  to resolve a
 	conflict during an update.

Tue Nov 10 07:11:44 1998  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Makefile.am: Fixed up the list of files *again*.

1998-11-05  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* cvs.html: Fixed the examples of anonymous CVS.  Added a note
	that the head of the CVS tree is alpha code.

	* Makefile.am: Fixed up the distributed-files list to include all
	the HTML Dan added yesterday.

1998-11-05  Dan Espen  <dane@mk.bellcore.com>

	* txt2html.sh (outfile): Replaced txt2html.ksh with txt2html.sh.
	Added logic to handle '<>&' special characters in text.

1998-11-04  Dan Espen  <dane@mk.bellcore.com>

	*   Added  README,     black-stone1.jpg, index.html,     fvwm.gif,
 	download.html      features.html,   mailinglist.html,   docs.html,
 	modules.html,           mod_changes.html,        mod_concept.html,
 	mod_security.html,                        mod_initialization.html,
 	mod_m2f_communication.html,            mod_f2m_communication.html,
 	links.html, txt2html.ksh.

	The main docs come from the web site, the module docs are restructured,
	and updated.

