@@ -25,9 +25,9 @@ Please keep in mind that the Beta code can potentially become
 unstable or buggy at any time, so USE AT YOUR OWN RISK.
 Of course you may find bugs in "Official" versions also.
 If you do download a Beta version, we do appreciate bug reports.
-Send bug reports to the
-<a href="mailto:fvwm-workers@hpc.uh.edu">FVWM Workers Mailing List</a>.
-
+If you find any bugs, please enter them into the
+<a href="http://fvwm.math.uh.edu/cgi-bin/fvwm-bug">
+FVWM Bug Tracking System</a>.
 <p>
 If you just have a question, be sure to first read our
 <a href="docs.html">Documentation</a> first, then you might want to
