@@ -21,9 +21,10 @@ Just click on the version numbers above to download them.
 Please keep in mind that the Beta code can potentially become
 unstable or buggy at any time, so USE AT YOUR OWN RISK.  You will. of
 course, find bugs in the more stable Officially released versions too
-(see the man page for a note on this).  Please report new bugs to the
-<a href="mailto:fvwm-workers@hpc.uh.edu">FVWM Workers Mailing List</a> (see below).
-
+(see the man page for a note on this).
+If you find any bugs, please enter them into the
+<a href="http://fvwm.math.uh.edu/cgi-bin/fvwm-bug">
+FVWM Bug Tracking System</a>.
 <p>
 
 Development right now (10/98) is quite active, expect to see a new
